--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wangwei.polycare">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    package="com.example.wangwei.polycare_f">
 
     <application
         android:allowBackup="true"
@@ -22,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.EventActivity"></activity>
-        <activity android:name=".activity.AnnouncementActivity"></activity>
+        <activity android:name=".activity.DeclarationActivity"></activity>
     </application>
 
 </manifest>
