--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 24 21:50:08 CEST 2018
-ndk.dir=/Users/wangwei/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/wangwei/Library/Android/sdk
+#Mon Apr 30 14:58:13 CEST 2018
+sdk.dir=C\:\\Users\\theo_\\AppData\\Local\\Android\\Sdk
