--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
         <activity android:name=".activity.DeclarationActivity" />
         <activity android:name=".activity.ChangeEventActivity" />
     </application>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 </manifest>
