--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:background="@drawable/border"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden">
@@ -17,9 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.EventActivity" />
-        <activity android:name=".activity.DeclarationActivity" />
-        <activity android:name=".activity.ChangeEventActivity" />
+        <activity
+            android:name=".activity.EventActivity"
+            android:label="@string/event_activity"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".activity.DeclarationActivity"
+            android:label="@string/declar_activity"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".activity.ChangeEventActivity"
+            android:label="@string/change_activity"
+            android:theme="@style/AppTheme"/>
     </application>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
