--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:background="@drawable/border"
         android:theme="@style/AppTheme">
+        <uses-library android:name="com.google.android.maps"/>
         <activity android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter>
@@ -30,7 +31,10 @@
             android:name=".activity.ChangeEventActivity"
             android:label="@string/change_activity"
             android:theme="@style/AppTheme"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAh_LBhFXMO-ZGnekJkiF7gLX5PtyZRd2U"/>
+
     </application>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
