--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.EventActivity"
-            android:label="@string/event_activity"
-            android:theme="@style/AppTheme"/>
-        <activity
             android:name=".activity.DeclarationActivity"
             android:label="@string/declar_activity"
             android:theme="@style/AppTheme"/>
-        <activity
-            android:name=".activity.ChangeEventActivity"
-            android:label="@string/change_activity"
-            android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.EventActivity"></activity>
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAh_LBhFXMO-ZGnekJkiF7gLX5PtyZRd2U"/>
 
