--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:background="@drawable/border"
         android:theme="@style/AppTheme">
+        <uses-library android:name="com.google.android.maps"/>
         <activity android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter>
