--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:label="@string/declar_activity"
             android:theme="@style/AppTheme"/>
         <activity android:name=".activity.EventActivity"></activity>
+        <activity
+            android:name=".activity.MapActivity"
+            android:screenOrientation="landscape">
+        </activity>
+
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAh_LBhFXMO-ZGnekJkiF7gLX5PtyZRd2U"/>
