--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"
@@ -23,7 +24,8 @@
             android:name=".activity.DeclarationActivity"
             android:label="@string/declar_activity"
             android:theme="@style/AppTheme"/>
-        <activity android:name=".activity.EventActivity"></activity>
+        <activity android:name=".activity.EventActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.MapActivity"
             android:screenOrientation="landscape">
