--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".activity.DeclarationActivity"
+            android:screenOrientation="portrait"
             android:label="@string/declar_activity"
             android:theme="@style/AppTheme"/>
         <activity android:name=".activity.EventActivity"
