--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
             android:screenOrientation="portrait"
             android:label="@string/declar_activity"
             android:theme="@style/AppTheme"/>
-        <activity android:name=".activity.EventActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.EventActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name=".activity.MapActivity"
             android:screenOrientation="landscape">
